apps/comparebuilding-web/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comparebuilding-web
  namespace: comparebuilding-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/wlodzimierrr/compare_frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
